# Portfolio_Projects

./: README.md  main.py  pyproject.toml  requirements.txt
PKG/: README.md  pyproject.toml
PKG/src/Tic_Tac_Toe_Miked/: classes.py
PKG/src/tic_tac_toe_miked/: ttt.py
morse_converter/: __init__.py  morse.csv
src/morse_text_miked/: morse_text.py
tests/: test_morse.py
