[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morse_text_miked"
version = "0.2"
authors = [{ name="miked (Mike Zubko)", email="mike0618dev@yahoo.com" }]
description = "A Text to Morse and back console auto converter"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mike0618/Portfolio_Projects/tree/1_Text_to_Morse_Miked"
"Bug Tracker" = "https://github.com/mike0618/Portfolio_Projects/issues"
