[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Tic_Tac_Toe_Miked"
version = "0.1"
authors = [{ name="miked (Mike Zubko)", email="mike0618dev@yahoo.com" }]
description = "Tic-Tac-Toe console game with AI"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mike0618/Portfolio_Projects/tree/2_Tic_Tac_Toe/PKG"
"Bug Tracker" = "https://github.com/mike0618/Portfolio_Projects/issues"
